--- a/base.css
+++ b/base.css
@@ -4,7 +4,9 @@
 */
 
 html,
-body,
+body {
+  background-color: black;
+}
 div,
 span,
 applet,
@@ -106,7 +108,7 @@ section {
   display: block;
 }
 body {
-  /* Add background-color declaration here */
+   Set page background to black
 }
 ol,
 ul {
